Finish mobile layout

--- a/index.html
+++ b/index.html
@@ -18,12 +18,28 @@
 <body>
   <div class="wrapper">
     <header>
-      logo
-      <nav class="right">right nav</nav>
+      <img src="/images/logo.svg" alt="logo icon">
+      <nav class="right">
+        <div class="mobile-dropDown">
+          <button class="mobile-nav"><img src="/images/icon-hamburger.svg" alt="menu icon"></button>
+          
+        </div>
+      </nav>
     </header>
     <div class="hero">
-      <div class="hero-left">left hero section</div>
-      <div class="hero-right">right hero section</div>
+      <div class="hero-left">
+        <ul class="tags">
+          <li class="tag-item">New</li>
+          <li class="tag-item">Monograph Dashboard</li>
+        </ul>
+        <h1>Powerful insights into your team</h1>
+        <p>Project planning and time tracking for agile teams</p>
+        <button class="demo-btn">Schedule a demo</button>
+        <button class="preview-btn">to see a live preview</button>
+      </div>
+      <div class="hero-right">
+        <img src="/images/illustration-devices.svg" alt="device illustration">
+      </div>
     </div>
     <footer>
       <p class="attribution">
