Add image as background to hero-right

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <header>
       <img src="/images/logo.svg" alt="logo icon">
       <nav class="right">
+        <div class="desktop-nav">
+          <ul>
+            <li>Product</li>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Login</li>
+          </ul>
+        </div>
         <div class="mobile-dropDown">
           <button class="mobile-nav" onclick="displayNav()">
             <img src="/images/icon-hamburger.svg" alt="menu icon" id="hamburger-icon">
@@ -48,7 +56,7 @@
         <button class="preview-btn">to see a live preview</button>
       </div>
       <div class="hero-right">
-        <img src="/images/illustration-devices.svg" alt="device illustration">
+        <!-- <img src="/images/illustration-devices.svg" alt="device illustration"> -->
       </div>
     </div>
     <footer>
