Add active state to navigation and demo btn

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <nav class="right">
         <div class="desktop-nav">
           <ul>
-            <li>Product</li>
-            <li>Features</li>
-            <li>Pricing</li>
-            <li>Login</li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Login</a></li>
           </ul>
         </div>
         <div class="mobile-dropDown">
